--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       20/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 71 points<br>
+Unlocked       20/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 76 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -41,14 +41,15 @@ Unlocked       20/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1544 status
+1567 status
  955 branch
- 525 symbolic-ref
- 487 rev-parse
+ 546 symbolic-ref
+ 508 rev-parse
   27 checkout
   21 config
   21 achievements
@@ -58,11 +59,11 @@ Git commands sorted by usage:
   15 diff
   10 reset
   10 push
+   9 add
    8 commit
-   8 add
+   6 init
    6 clean
    5 rm
-   5 init
    5 ignore
    5 clone
    4 submodule
@@ -75,6 +76,7 @@ Git commands sorted by usage:
    2 stash
    2 remote
    2 rebase
+   2 pull
    2 gc
    2 fetch
    2 branchs
@@ -82,7 +84,6 @@ Git commands sorted by usage:
    2 --version
    1 tag
    1 summary
-   1 pull
    1 prune
    1 ls-remote
    1 ll
