--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
+Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 92 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -21,6 +21,7 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -49,38 +50,39 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1754 status
- 958 branch
- 720 symbolic-ref
- 682 rev-parse
-  29 checkout
+1942 status
+ 962 branch
+ 883 symbolic-ref
+ 845 rev-parse
+  33 checkout
   24 config
   21 help
   21 achievements
   19 diff
-  16 push
+  18 push
+  16 reset
   16 ls-files
   16 log
-  12 reset
-  11 commit
-  10 remote
+  13 remote
+  13 pull
+  13 commit
   10 add
-   7 clone
+   8 clone
+   8 clean
+   7 --version
+   6 rm
    6 init
-   6 clean
-   5 rm
    5 ignore
    5 flow
-   5 --version
    5 !git
    4 submodule
    4 show
    4 merge
+   3 stash
    3 instaweb
    3 Wed
-   2 stash
    2 rebase
-   2 pull
+   2 ll
    2 gc
    2 fetch
    2 branchs
@@ -89,11 +91,11 @@ Git commands sorted by usage:
    1 summary
    1 prune
    1 ls-remote
-   1 ll
    1 extras
    1 extra
    1 dropbox
    1 count
+   1 cbr
    1 alias
    1 --help
 </pre>
